SERVER-21403 plumb flag indicating whether or not index is unique down to MMAPv1 BtreeLogic

Includes similar plumbing for the ephemeralForTest storage
engine. WiredTiger integration layer changes are unnecessary
since WT index cursors are already unique-aware.