src/mongo/db/storage/ephemeral_for_test/ephemeral_for_test_btree_impl.h
@@ -42,6 +42,7 @@ class IndexCatalogEntry;
  * All permanent data will be stored and fetch from dataInOut.
  */
 SortedDataInterface* getEphemeralForTestBtreeImpl(const Ordering& ordering,
+                                                  bool isUnique,
                                                   std::shared_ptr<void>* dataInOut);
 
 }  // namespace mongo
